fix img overflow

--- a/src/pages/Project.css
+++ b/src/pages/Project.css
@@ -32,9 +32,9 @@
   position: relative;
   top: -70px;
 }
+
 .project-container {
   width: 100%;
-  overflow-x: hidden;
 }
 
 .fade-overlay-2 {
